--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background: #111;
+    background: #080f13;
     color: #eaeaea;
     margin: 0;
     padding: 16px;
