--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     <h2>Traits</h2>
     <p>Talent paths, stat focus, and variations.</p>
       <img
-        src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/Burglar_traits_lvl70.png">
-  </div>
+        src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Burglar_traits_lvl70.png?raw=true">
 
   <div class="tab-content">
     <h2>Crit Chain</h2>
