--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
   <div class="tab-content">
     <h2>Crit Chain</h2>
-    <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
+    <p>
+      <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
 
                                   ┌──────────────────────────┐
                                   │        Stealth Prep      │
@@ -143,8 +144,9 @@
                                                           [COUP DE GRÂCE] (every 45s)
                                               “Acts as from Stealth” + +20% Melee Damage
                                           Refreshes cooldowns faster; enables WPS + SS burst
-
-</pre>
+      </p>
+  </pre>
+  </div>
 </div>
 
 <script>
