--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
 
   <div class="tab-content">
     <h2>Crit Chain</h2>
-    <p>
-      <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
-
+    <div>
+    
                                   ┌──────────────────────────┐
                                   │        Stealth Prep      │
                                   │ Sneak/Hide in Plain Sight│
@@ -144,8 +143,7 @@
                                                           [COUP DE GRÂCE] (every 45s)
                                               “Acts as from Stealth” + +20% Melee Damage
                                           Refreshes cooldowns faster; enables WPS + SS burst
-      </p>
-  </pre>
+    </div>
   </div>
 </div>
 
