--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <p>Talent paths, stat focus, and variations.</p>
       <img
         src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Burglar_traits_lvl70.png?raw=true">
-
+</div>
   <div class="tab-content">
     <h2>Crit Chain</h2>
-    <div>
-    
+  <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
+
                                   ┌──────────────────────────┐
                                   │        Stealth Prep      │
                                   │ Sneak/Hide in Plain Sight│
@@ -143,8 +143,11 @@
                                                           [COUP DE GRÂCE] (every 45s)
                                               “Acts as from Stealth” + +20% Melee Damage
                                           Refreshes cooldowns faster; enables WPS + SS burst
-    </div>
+
+</pre>
   </div>
+
+
 </div>
 
 <script>
