--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
   </div>
 
   <div class="tab-content">
-    <h2>Virtues</h2>
+    <h2>Virtue Traits</h2>
     
   </div>
 
   <div class="tab-content">
-    <h2>Traits</h2>
-    <p>Talent paths, stat focus, and variations.</p>
+    <h2>Class Traits</h2>
       <img
         src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Burglar_traits_lvl70.png?raw=true">
 </div>
   <div class="tab-content">
     <h2>Crit Chain</h2>
+    <p> This is an advanced guide. There is more then one possible entry point that will grant Critcal Reponse. The order represented here is not absolute it a general outline.</p>
   <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
 
                                   ┌──────────────────────────┐
