--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     color: #fff;
     font-weight: bold;
     border-bottom: 2px solid #4aa3ff;
+    
+    box-shadow: 0 4px 8px rgba(74, 163, 255, 0.7);
   }
 
   .tab-content {
