--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   </div>
 
   <div class="tab-content active">
-    <h2>Armour</h2>
-    <p>High-level description of the class, role, and strengths.</p>
+    <h2>Armour <img src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Cursor_Windows_Vista.gif?raw=true"></h2>
+    <p>We are working on adding this content</p>
   </div>
 
   <div class="tab-content">
