--- a/index.html
+++ b/index.html
@@ -63,20 +63,23 @@
   </div>
 
   <div class="tab-content active">
-    <h2>Armour <img src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Cursor_Windows_Vista.gif?raw=true"></h2>
+    <h2>Armour</h2>
+
     <p>We are working on adding this content</p>
+     <img
+    src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
   </div>
 
   <div class="tab-content">
     <h2>Virtue Traits</h2>
       <img 
-        src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Burglar_virtues.png?raw=true">
+        src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main//Burglar_virtues.png">
   </div>
 
   <div class="tab-content">
     <h2>Class Traits</h2>
       <img
-        src="https://github.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/blob/main/Burglar_traits_lvl70.png?raw=true">
+        src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Burglar_traits_lvl70.png">
 </div>
   <div class="tab-content">
     <h2>Crit Chain</h2>
