--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
   <div class="tab-content active">
     <h2>Armour</h2>
 
-    <p>We are working on adding this content</p>
+    <p>We are working on adding this content. 
+      Virtues,Traits,Strategy are working
+    </p>
      <img
     src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
   </div>
