--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body {
     font-family: Arial, sans-serif;
     background: #080f13;
-    color: #eaeaea;
+    color: #cccccc;
     margin: 0;
     padding: 16px;
   }
