--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <div class="tab-content">
     <h2>Class Traits</h2>
-    <p>Tree Displayed represents advancement for Lvl 70</p>
+    <p>Tree displayed represents advancement for Lvl 70</p>
       <img
         src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Burglar_traits_lvl70.png">
 </div>
