--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@
 </style>
 </head>
 <body>
-
+<!--Tabber-->
 <div class="tabber">
   <div class="tab-buttons">
     <button class="active" onclick="openTab(0)">Armour</button>
     <button onclick="openTab(1)">Virtues</button>
     <button onclick="openTab(2)">Traits</button>
     <button onclick="openTab(3)">Strategy</button>
+    <button onclick="openTab(4)">Legendary</button>
   </div>
 
   <div class="tab-content active">
     <h2>Armour</h2>
-
-    <p>We are working on adding this content. </p>
       <p>Virtues,Traits,Strategy are working</p>
       <br>
      <img
@@ -155,9 +154,11 @@
 </pre>
   </div>
 
-
+<div class="tab-content">
+  <h2>Legendary Items</h2>
+   <img
+    src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
 </div>
-
 <script>
   function openTab(index) {
     const buttons = document.querySelectorAll('.tab-buttons button');
