--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     background: #262626;
     color: #fff;
     font-weight: bold;
-    border-bottom: 2px solid #4aa3ff;
+    border-bottom: 2px solid #9400D3;
+
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.7);
     
-    box-shadow: 0 4px 8px rgba(74, 163, 255, 0.7);
   }
 
   .tab-content {
