--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     background: #262626;
     color: #fff;
     font-weight: bold;
-    border-bottom: 2px solid #9400D3;
+    border-bottom: 2px solid #FFD700;
 
-    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.7);
+    box-shadow: 0 4px 8px rgba(255, 215, 0, 0.7);
     
   }
 
