--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     background: #262626;
     color: #fff;
     font-weight: bold;
-    border-bottom: 2px solid #FFD700;
+    border-bottom: 2px solid #FFA500;
 
-    box-shadow: 0 4px 8px rgba(255, 215, 0, 0.7);
+    box-shadow: 0 4px 8px rgba(255, 165, 0, 0.7)  /* Orange, 70% opaque */
     
   }
 
