--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <div class="tab-content">
   <h2>Legendary Items</h2>
-  <p>The Main-hand legendary weapon displayed represents all items needed by Lvl 70 notwithstanding slot lvl</p>
+  <p>The Main-hand legendary weapon displayed represents all basic traceries needed by Lvl 70 notwithstanding lvl of slot</p>
    <img
     src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Legendary_main_lvl70.png">
 </div>
