--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 <!--Tabber-->
 <div class="tabber">
   <div class="tab-buttons">
-    <button class="active" onclick="openTab(0)">Armour</button>
+    <button class="active" onclick="openTab(0)">Armour(Beta)</button>
     <button onclick="openTab(1)">Virtues</button>
     <button onclick="openTab(2)">Traits</button>
     <button onclick="openTab(3)">Strategy</button>
@@ -96,11 +96,10 @@ body {
   </div>
 
   <div class="tab-content active">
-    <h2></h2>
-      <p>Linala is working on developing a system to display this info, the other tabs are working</p>
-     <img
+    <h2>Armour</h2>
+      <p>Linala is working on a system to display this content it is still in beta./p>
+    <div class="tooltip"> <img
     src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
-    <div class="tooltip">Hover over me
   <span class="tooltiptext">Some tooltip text</span>
 </div>
   </div>
