--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ body {
 
   <div class="tab-content active">
     <h2>Armour</h2>
-      <p>Linala is working on a system to display this content it is still in beta./p>
+      <p>Linala is working on a system to display this content it is still in beta.</p>
+      <br>
     <div class="tooltip"> <img
     src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
   <span class="tooltiptext">Some tooltip text</span>
