--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ body {
   <div class="tab-content">
     <h2>Crit Chain</h2>
     <p> This is an advanced guide. The order represented here is not absolute</p> 
-    <p>There is more then one possible entry point that will grant Critcal Reponse. 
-      e.g. Impproved Feint "acts from stealth 4s". Coup De Grace is a finisher that re-opens crit-chain. 
+    <p> Note: Their is more then one entry point that will grant Critcal Reponse. 
+  
       
     </p>
   <pre style="font-family: 'Courier New', monospace; font-size: 14px; line-height: 1.2; display: inline-block; text-align: left; color: #dfe7ff; background-color: #080f13; padding: 10px; border-radius: 6px;">
