--- a/index.html
+++ b/index.html
@@ -88,50 +88,14 @@ body {
 <!--Tabber-->
 <div class="tabber">
   <div class="tab-buttons">
-    <button class="active" onclick="openTab(0)">Armour (Beta)</button>
+    <button class="active" onclick="openTab(0)">Strategy</button>
     <button onclick="openTab(1)">Virtues</button>
     <button onclick="openTab(2)">Traits</button>
-    <button onclick="openTab(3)">Strategy</button>
-    <button onclick="openTab(4)">Main Hand</button>
-    <button onclick="openTab(5)">Class Item (N/A)</button>
+    <button onclick="openTab(3)">Main Hand</button>
+    <button onclick="openTab(4)">Class Item</button>
   </div>
 
   <div class="tab-content active">
-    <h2>Armour</h2>
-      <p>Linala is working on a system to display this content it is still in beta.</p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    <div class="tooltip"> <img
-    src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Cursor_Windows_Vista.gif">
-  <span class="tooltiptext"> 
-   <p><b>The Best Armour</b></p>
-      <p>Attribute 1</p>
-       <p>Attribute 2</p>
-         <p>Attribute 3</p>
-      <br>
-        <p>Attribute 4</p>
-  </span>
-</div>
-  </div>
-
-  <div class="tab-content">
-    <h2>Virtue Traits</h2>
-      <img 
-        src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main//Burglar_virtues.png">
-  </div>
-
-  <div class="tab-content">
-    <h2>Class Traits</h2>
-    <p>Tree displayed represents advancement for Lvl 70</p>
-      <img
-        src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Burglar_traits_lvl70.png">
-</div>
-  <div class="tab-content">
     <h2>Crit Chain</h2>
     <p> This is an advanced guide. The order represented here is not absolute</p> 
     <p> Note: More then one entry point will grant Critcal Reponse. 
@@ -205,6 +169,21 @@ body {
 </pre>
   </div>
 
+
+  <div class="tab-content">
+    <h2>Virtue Traits</h2>
+      <img 
+        src= "https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main//Burglar_virtues.png">
+  </div>
+
+  <div class="tab-content">
+    <h2>Class Traits</h2>
+    <p>Tree displayed represents advancement for Lvl 70</p>
+      <img
+        src="https://raw.githubusercontent.com/bbdollfrags/Lotro_CossWeb-v.1.0-beta/main/Burglar_traits_lvl70.png">
+</div>
+  <div class="tab-content">
+  
 <div class="tab-content">
   <h2>Main Hand Legendary Item</h2>
   <p>The Main-hand legendary weapon displayed represents all basic traceries needed by Lvl 70 notwithstanding lvl of slot</p>
